--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_orange">#F3960F</color>
+    <color name="orange">#F3B55A</color>
+    <color name="yellow">#FFEB3B</color>
+    <color name="green">#97CA5C</color>
 </resources>
