--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="dark_orange">#F3960F</color>
+    <color name="deep_orange">#F1A73A</color>
     <color name="orange">#F3B55A</color>
     <color name="yellow">#FFEB3B</color>
     <color name="green">#97CA5C</color>
